--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -97,7 +97,7 @@ Grid.Column="1" Panel.ZIndex="1"
             <!--Input-->
 
             <Grid Grid.Row="1" >
-                <Border CornerRadius="0 0 10 0" Background="White" Margin="0,0,10,0">
+                <Border CornerRadius="0 0 10 0" Background="White">
                     <Button Command="{Binding ModifyDiagnosisCommand}" 
                         Content="Create invoice"  Margin="390,0,0,50" Style="{StaticResource btnAdd}"/>
                 </Border>
