--- a/QLPhongMachTuWPF/View/Homepage.xaml
+++ b/QLPhongMachTuWPF/View/Homepage.xaml
@@ -91,7 +91,9 @@
 
             <!--Chart-->
             <Grid Grid.Row="2" Margin="10">
+                <TextBlock Text="Monthly Patient Data Overview" Panel.ZIndex="1" Style="{StaticResource textblock}" Margin="10" VerticalAlignment="Top"/>
                 <Border Background="White" CornerRadius="10" Padding="10">
+                   
                     <lvc:CartesianChart Name="CustomerChart" Margin="10,50,10,10">
                         <lvc:CartesianChart.Series>
                             <lvc:ColumnSeries Title="Number of customers" Values="{Binding CustomerCounts}" />
@@ -103,6 +105,7 @@
                             <lvc:Axis Title="Numbers" />
                         </lvc:CartesianChart.AxisY>
                     </lvc:CartesianChart>
+                   
                 </Border>
             </Grid>
 
