--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -98,7 +98,7 @@ Grid.Column="1" Panel.ZIndex="1"
 
             <Grid Grid.Row="1" >
                 <Border CornerRadius="0 0 10 0" Background="White">
-                    <Button Command="{Binding ModifyDiagnosisCommand}" 
+                    <Button Command="{Binding CreateInvoice}" 
                         Content="Create invoice"  Margin="390,0,0,50" Style="{StaticResource btnAdd}"/>
                 </Border>
                 <StackPanel Margin="0 10 0 0" Orientation="Vertical">
