--- a/QLPhongMachTuWPF/View/AddStaff.xaml
+++ b/QLPhongMachTuWPF/View/AddStaff.xaml
@@ -129,7 +129,7 @@
                     <ComboBox x:Name="cmbMonth"
                               Text="{Binding Thang}"
                               
-                             ItemsSource="{Binding Years}"
+                             ItemsSource="{Binding Months}"
                               SelectedItem="{Binding SelectedMonth}"
                               Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
           FontSize="16" Margin="10 0 0 0"/>
